# lipu

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  package-lock.json  package.json  vite.config.ts
src/: backend.ts  core.rs  files.ts  items.ts  lib.rs  main.rs  main.ts  player.ts  reader.ts  styles.css  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  lipu.rs  main.rs
