[package]
name = "lipu"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
feed-rs = "2.1.0"
inquire = "0.7.5"
reqwest = { version = "0.12.5", features = ["rustls-tls"], default-features = false }
serde = "1.0.208"
tokio = { version = "1.39.2", features = ["full", "net", "rt"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = { level = "deny", priority = 8 }
pedantic = { level = "deny", priority = 10 }
nursery = { level = "deny", priority = 10 }
unwrap_used = { level = "warn", priority = 9 }

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
