[package]
name = "lipu"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
color-eyre = "0.6.3"
console_error_panic_hook = "0.1.7"
feed-rs = "2.1.0"
leptos = { version = "0.6.14", features = ["csr", "nightly"] }
reqwest = { version = "0.12.5", features = ["rustls-tls"], default-features = false }
serde = "1.0.208"
serde_json = "1.0.125"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = { level = "deny", priority = 8 }
pedantic = { level = "deny", priority = 10 }
nursery = { level = "deny", priority = 10 }
unwrap_used = { level = "warn", priority = 9 }

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
